<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:background="@drawable/splash_background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_shape"
        android:clipToOutline="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your name"
        android:inputType="text"
        android:background="@drawable/edittext_border"
        android:padding="10dp"/>


    <Button
        android:id="@+id/startButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/yellow"
        />
</LinearLayout>
