<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <!-- Top Navigation Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:tint="@color/dark_green"
            android:layout_marginTop="1dp"
            />
        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textStyle="bold"
            android:textSize="15dp"
            android:paddingLeft="0dp"
            android:textColor="@color/dark_green"
            android:backgroundTint="@android:color/transparent"

            />
        <TextView
            android:id="@+id/question_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Question Box -->




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_shadow"
        android:elevation="12dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="16dp"
        />


    </LinearLayout>

    <!-- Options -->
    <RadioGroup
        android:id="@+id/options_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/Loption_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_shadow"
            android:elevation="8dp">

            <RadioButton
                android:id="@+id/option_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_1"
                android:button="@null"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:backgroundTint="@android:color/transparent"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Loption_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_shadow"
            android:elevation="8dp">

            <RadioButton
                android:id="@+id/option_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_2"
                android:button="@null"
                android:textSize="16sp"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:backgroundTint="@android:color/transparent"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Loption_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_shadow"
            android:elevation="8dp">

            <RadioButton
                android:id="@+id/option_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_3"
                android:padding="16dp"
                android:button="@null"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:backgroundTint="@android:color/transparent"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Loption_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_shadow"
            android:elevation="8dp">

            <RadioButton
                android:id="@+id/option_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_4"
                android:padding="16dp"
                android:button="@null"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:backgroundTint="@android:color/transparent"
                />
        </LinearLayout>
    </RadioGroup>

    <!-- Navigation Button -->
    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/next"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_green"
        />

</LinearLayout>
